style.css
/* ... */
.grid-item figure:hover figcaption:after {
    opacity: 1;
    transform: translateX(0) translateY(0) rotateZ(0) rotate(0deg) scale(1);
    transition: all 0.4s ease-out;
}

.grid-item figure:hover figcaption .fa {
    transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(1);
    transition: 0.2s;
    opacity: 1;
}

.grid-item figure:hover figcaption .title {
    transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(1);
    transition: 0.4s;
    opacity: 1;
}

.grid-item figure:hover figcaption .sub-title {
    transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(1);
    transition: 0.6s;
    opacity: 1;
}

/*Contact*/

.container form {
    width: 640px;
    margin: 50px auto;
}

.container form .half {
    display: flex;
    justify-content: space-between;
}

.container .half .item {
    display: flex;
    flex-direction: column;
    margin-bottom: 24px;
    width: 48%;
}

.container form label {
    display: block;
    font-size: 16px;
    letter-spacing: 3.5px;
    margin-bottom: 16px;
}

.container form .half .item input {
    border: 1px solid #808080;
    outline: 0;
    padding: 16px;
    width: 100%;
    height: 44px;
    background: transparent;
    caret-color: white;
    color: white;
    font-size: 17px;
}

.container form .full {
    margin-bottom: 24px;
}

.container form .full textarea {
    background: transparent;
    border: 1px solid #808080;
    outline: 0;
    padding: 12px 16px;
    caret-color: white;
    color: white;
    width: 100%;
    height: 200px;
    font-size: 17px;
    resize: none;
}

button {
    border-radius: 0 !important;
}

.container form .half input:focus,
.container form .full textarea:focus {
    border-color: white;
}

.contact-form {
    margin-left: 75px;
}

@media screen and (max-width: 600px) {
    .container form .half {
        flex-direction: column;
    }

    .container .half .item,
    .container form .full {
        width: 85vw;
    }

    .contact-form {
        margin-left: 20px;
    }


}

